# PhilosophyService

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
actualization_service/: .flake8  pyproject.toml  watchers.xml
actualization_service/actualization_service/: main.py
actualization_service/actualization_service/collector/: interface.py
actualization_service/actualization_service/core/: __init__.py  conf_project.toml  config.py
actualization_service/actualization_service/data_sources/: base_entities.py  cyberleninka.py
actualization_service/actualization_service/db/: postgres.py  postgres_sqlalh.py
actualization_service/actualization_service/models/: collector_model.py  data_sources.py  errors.py
actualization_service/actualization_service/service/: tasks.py
actualization_service/actualization_service/utils/: helper.py  stability.py
actualization_service/src/core/: config.py
actualization_service/tests/functional/: conftest.py  settings.py
actualization_service/tests/functional/src/data_sources_test/: test_sources.py
actualization_service/tests/functional/src/loader_test/: db_test.py
actualization_service/tests/functional/testdata/: db_data_test.py  web_sources_test.py
actualization_service/tests/functional/utils/: patterns.py  wait_db.py
actualization_service/tests/unit/: conftest.py
actualization_service/tests/unit/src/collector_test/: test_interface.py
actualization_service/tests/unit/src/core_test/: config_test.py
actualization_service/tests/unit/src/data_sources_test/: test.html  test_cyberleninka.py
actualization_service/tests/unit/testdata/: pytest_conf_data.toml
db/postgresql/: .template.env  tables.sql
doc/architecture/: DB.plantuml  Архитектура.drawio  Диаграмма без названия.drawio
philosophy_app/: manage.py  pyproject.toml
philosophy_app/philosophy_admin/: admin.py  apps.py  models.py
philosophy_app/philosophy_admin/migrations/: 0001_initial.py
philosophy_app/philosophy_app/: asgi.py  settings.py  urls.py  wsgi.py
