[tool.poetry]
name = "philosophyservice"
version = "0.1.0"
description = ""
authors = ["Chumakov Mikhail <mikhail.ch2011@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
aiohttp = "^3.8.3"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
dash = "^2.6.2"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
wemake-python-styleguide = "^0.17.0"
black = {extras = ["d"], version = "^22.10.0"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
