[tool.poetry]
name = "actualization-service"
version = "0.1.0"
description = ""
authors = ["Chumakov Mikhail <mikhail.ch2011@yandex.ru>"]
readme = "README.md"
packages = [{include = "actualization_service"}]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.27.0"
loguru = "^0.6.0"
toml = "^0.10.2"
sentry-sdk = "^1.11.0"
pydantic = "^1.10.2"
aiohttp = "^3.8.3"
validators = "^0.20.0"
nest-asyncio = "^1.5.6"
backoff = "^2.2.1"
beautifulsoup4 = "^4.11.1"
methodtools = "^0.4.5"
alive-progress = "^2.4.1"
apache-airflow = "^2.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
poetry2setup = "^1.1.0"
pytest-asyncio = "^0.20.2"
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.10.0"
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
wrap_length = 79
multi_line_output = 3
py_version = "310"
include_trailing_comma = true
extend_skip = [
    ".json",
    ".md",
    ".pyi",
    ".txt",
    ".yml"
]
known_first_party = [
"utils",
]

[tool.mypy]
python_version = '3.10'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
