[tool.poetry]
name = "philosophy-app"
version = "0.1.0"
description = ""
authors = ["Chumakov Mikhail <mikhail.ch2011@yandex.ru>"]
readme = "README.md"
packages = [{include = "philosophy_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
loguru = "^0.6.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
